--- a/ers-global/pom.xml
+++ b/ers-global/pom.xml
@@ -9,6 +9,83 @@
   <properties>
     <tomcat.version>7.0.34</tomcat.version>
   </properties>
+
+  <repositories>
+ 	<repository>
+               <id>nxparser-repo</id>
+               <url>http://nxparser.googlecode.com/svn/repository</url>
+        </repository>
+        <repository>
+ 	         <id>nxparser-snapshots</id>
+                 <url>http://nxparser.googlecode.com/svn/snapshots</url>
+      </repository>
+      <repository>
+      		  <id>thirdparty-releases</id>
+	        <name>JBoss Thirdparty Releases</name>
+	        <url>https://repository.jboss.org/nexus/content/repositories/thirdparty-releases</url>
+      </repository>
+
+     <repository>
+		<id>nexus-repo</id>
+		<name>nexus_repo</name>
+		<url>http://repository.m2m.io:8081/nexus/content/repositories/public-releases/</url>
+     </repository>
+
+
+      <repository>
+		<releases>
+			<enabled>true</enabled>
+		</releases>
+		<snapshots>
+			<enabled>false</enabled>
+		</snapshots>
+		<id>aduna-repo</id>
+		<name>Aduna Repository</name>
+		<url>http://repo.aduna-software.org/maven2/releases</url>
+	</repository>
+	<repository>
+		<releases>
+			<enabled>false</enabled>
+			<updatePolicy>never</updatePolicy>
+			<checksumPolicy>fail</checksumPolicy>
+		</releases>
+		<snapshots>
+			<enabled>true</enabled>
+			<updatePolicy>daily</updatePolicy>
+			<checksumPolicy>warn</checksumPolicy>
+		</snapshots>
+		<id>aduna-snapshot-repo</id>
+		<name>Aduna Snapshot Repository</name>
+		<url>http://repository.aduna-software.org/maven2-snapshots</url>
+	</repository>
+	<repository>
+	    <id>com.springsource.repository.bundles.release
+	    </id>
+	    <name>SpringSource Enterprise Bundle Repository -
+		SpringSource Bundle Releases</name>
+	    <url>http://repository.springsource.com/maven/bundles/release
+	    </url>
+	    <releases>
+		<enabled>true</enabled>
+		<updatePolicy>daily</updatePolicy>
+		<checksumPolicy>warn</checksumPolicy>
+	    </releases>
+	</repository>
+	<repository>
+	    <id>com.springsource.repository.bundles.external
+	    </id>
+	    <name>SpringSource Enterprise Bundle Repository -
+		External Bundle Releases</name>
+	    <url>http://repository.springsource.com/maven/bundles/external
+	    </url>
+	    <releases>
+		<enabled>true</enabled>
+		<updatePolicy>daily</updatePolicy>
+		<checksumPolicy>warn</checksumPolicy>
+	    </releases>
+	</repository>
+  </repositories>
+
   <dependencies>
     <dependency>
         <groupId>org.apache.tomcat.embed</groupId>
@@ -39,10 +116,304 @@
         <groupId>org.apache.tomcat</groupId>
         <artifactId>tomcat-jsp-api</artifactId>
         <version>${tomcat.version}</version>
+    </dependency> 
+    <dependency>
+	<groupId>io.cassandra.sdk</groupId>
+	<artifactId>cassandraio-java</artifactId>
+	<version>0.0.1</version>
+    </dependency>
+    <!-- add dependencies of cumulusRDF according to WEB-INF/lib/ dir and https://repository.sonatype.org/ -->
+    <dependency>
+  	<groupId>org.apache.cassandra</groupId>
+  	<artifactId>apache-cassandra</artifactId>
+  	<version>1.1.0</version>
+  	<type>pom</type>
+    </dependency>
+    <dependency>
+	  <groupId>org.apache.cassandra</groupId>
+	  <artifactId>cassandra-clientutil</artifactId>
+	  <version>1.1.10</version>
+    </dependency>
+    <dependency>
+	  <groupId>org.apache.cassandra</groupId>
+	  <artifactId>cassandra-thrift</artifactId>
+	  <version>1.1.10</version> 
+     </dependency>
+     <dependency>
+ 	  <groupId>commons-cli</groupId>
+	  <artifactId>commons-cli</artifactId>
+	  <version>1.1</version>
+    </dependency> 
+    <dependency>
+  	<groupId>commons-lang</groupId>
+	<artifactId>commons-lang</artifactId>
+	<version>2.4</version> 
+    </dependency>
+    <dependency>
+	  <groupId>com.google.guava</groupId>
+	  <artifactId>guava</artifactId>
+	  <version>r08</version>
+    </dependency>
+    <dependency>
+	  <groupId>org.hectorclient</groupId>
+ 	  <artifactId>hector-core</artifactId>
+	  <version>1.1-1</version>
+    </dependency>
+    <dependency>
+	  <groupId>org.apache.thrift</groupId>
+	  <artifactId>libthrift</artifactId>
+	  <version>0.7.0</version>
+    </dependency> 
+    <dependency>
+	  <groupId>org.semanticweb.yars</groupId>
+	  <artifactId>nxparser</artifactId>
+	  <version>1.2.2</version>
+    </dependency>
+<dependency>
+  <groupId>org.junit</groupId>
+  <artifactId>com.springsource.org.junit</artifactId>
+  <version>4.9.0</version>
+</dependency>
+
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-model</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-rio-api</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-rio-binary</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-rio-ntriples</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-rio-n3</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-rio-rdfxml</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-rio-trix</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-rio-turtle</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-rio-trig</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-query</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-queryalgebra-model</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-queryalgebra-evaluation</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-queryparser-api</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-queryparser-serql</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-queryparser-sparql</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-queryresultio-api</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-queryresultio-binary</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-queryresultio-sparqljson</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-queryresultio-sparqlxml</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-queryresultio-text</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-repository-api</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-repository-manager</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-repository-http</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-repository-sparql</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-repository-sail</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-repository-event</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-repository-dataset</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-repository-contextaware</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-http-protocol</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-http-client</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-sail-api</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-sail-inferencer</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-sail-memory</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-sail-nativerdf</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-sail-rdbms</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-config</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-util</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-runtime</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-console</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-http-server</artifactId>
+<version>2.6.2</version>
+<type>war</type>
+<scope>runtime</scope>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-http-server-spring</artifactId>
+<version>2.6.2</version>
+</dependency>
+<dependency>
+<groupId>org.openrdf.sesame</groupId>
+<artifactId>sesame-http-workbench</artifactId>
+<version>2.6.2</version>
+<type>war</type>
+<scope>runtime</scope>
+</dependency>
+
+    <dependency>
+	  <groupId>tomcat</groupId>
+	  <artifactId>servlet-api</artifactId>
+	  <version>5.5.23</version>
+    </dependency>
+    <dependency>
+	  <groupId>org.slf4j</groupId>
+	  <artifactId>slf4j-api</artifactId>
+	  <version>1.6.4</version>
+    </dependency>
+    <dependency>
+	  <groupId>org.slf4j</groupId>
+	  <artifactId>slf4j-simple</artifactId>
+	  <version>1.6.4</version>
+    </dependency>
+    <dependency>
+	  <groupId>org.yaml</groupId>
+	  <artifactId>snakeyaml</artifactId>
+	  <version>1.9</version>
     </dependency>
   </dependencies>
+
   <build>
-    <finalName>embeddedTomcatSample</finalName>
+    <finalName>ers-global-server</finalName>
     <plugins>
 	 <plugin>
         <groupId>org.apache.maven.plugins</groupId>
