--- a/ers-global/pom.xml
+++ b/ers-global/pom.xml
@@ -6,6 +6,7 @@
   <version>1.1-SNAPSHOT</version>
   <name>ERS Global Server Maven Webapp</name>
   <url>http://maven.apache.org</url>
+<!--  <packaging>war</packaging> -->
   <properties>
     <tomcat.version>7.0.34</tomcat.version>
   </properties>
@@ -117,12 +118,21 @@
         <artifactId>tomcat-jsp-api</artifactId>
         <version>${tomcat.version}</version>
     </dependency> 
+
     <dependency>
 	<groupId>io.cassandra.sdk</groupId>
 	<artifactId>cassandraio-java</artifactId>
 	<version>0.0.1</version>
     </dependency>
     <!-- add dependencies of cumulusRDF according to WEB-INF/lib/ dir and https://repository.sonatype.org/ -->
+
+    <dependency>
+    	    <groupId>org.cassandraunit</groupId>
+	    <artifactId>cassandra-unit</artifactId>
+	    <version>1.1.1.2</version>
+    </dependency>
+
+<!-- REMOVE this because of cassandra -unit
     <dependency>
   	<groupId>org.apache.cassandra</groupId>
   	<artifactId>apache-cassandra</artifactId>
@@ -139,6 +149,12 @@
 	  <artifactId>cassandra-thrift</artifactId>
 	  <version>1.1.10</version> 
      </dependency>
+	<dependency>
+	  <groupId>org.hectorclient</groupId>
+ 	  <artifactId>hector-core</artifactId>
+	  <version>1.1-1</version>
+    </dependency>
+-->
      <dependency>
  	  <groupId>commons-cli</groupId>
 	  <artifactId>commons-cli</artifactId>
@@ -153,11 +169,6 @@
 	  <groupId>com.google.guava</groupId>
 	  <artifactId>guava</artifactId>
 	  <version>r08</version>
-    </dependency>
-    <dependency>
-	  <groupId>org.hectorclient</groupId>
- 	  <artifactId>hector-core</artifactId>
-	  <version>1.1-1</version>
     </dependency>
     <dependency>
 	  <groupId>org.apache.thrift</groupId>
@@ -424,6 +435,7 @@
           <target>1.6</target>
         </configuration>
       </plugin>
+
         <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>appassembler-maven-plugin</artifactId>
@@ -446,6 +458,7 @@
                 </execution>
             </executions>
         </plugin>
+
     </plugins>
   </build>
 </project>
