--- a/ers-global/pom.xml
+++ b/ers-global/pom.xml
@@ -119,20 +119,15 @@
         <version>${tomcat.version}</version>
     </dependency> 
 
-    <dependency>
-	<groupId>io.cassandra.sdk</groupId>
-	<artifactId>cassandraio-java</artifactId>
-	<version>0.0.1</version>
-    </dependency>
     <!-- add dependencies of cumulusRDF according to WEB-INF/lib/ dir and https://repository.sonatype.org/ -->
-
-    <dependency>
+<!--    <dependency>
     	    <groupId>org.cassandraunit</groupId>
 	    <artifactId>cassandra-unit</artifactId>
 	    <version>1.1.1.2</version>
-    </dependency>
+    </dependency> 
+-->
 
-<!-- REMOVE this because of cassandra -unit
+<!-- REMOVE this because of cassandra -unit -->
     <dependency>
   	<groupId>org.apache.cassandra</groupId>
   	<artifactId>apache-cassandra</artifactId>
@@ -154,7 +149,7 @@
  	  <artifactId>hector-core</artifactId>
 	  <version>1.1-1</version>
     </dependency>
--->
+
      <dependency>
  	  <groupId>commons-cli</groupId>
 	  <artifactId>commons-cli</artifactId>
@@ -180,240 +175,240 @@
 	  <artifactId>nxparser</artifactId>
 	  <version>1.2.2</version>
     </dependency>
-<dependency>
-  <groupId>org.junit</groupId>
-  <artifactId>com.springsource.org.junit</artifactId>
-  <version>4.9.0</version>
-</dependency>
+	<dependency>
+	  <groupid>org.junit</groupid>
+	  <artifactid>com.springsource.org.junit</artifactid>
+	  <version>4.9.0</version>
+	</dependency>
 
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-model</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-rio-api</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-rio-binary</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-rio-ntriples</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-rio-n3</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-rio-rdfxml</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-rio-trix</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-rio-turtle</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-rio-trig</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-query</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-queryalgebra-model</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-queryalgebra-evaluation</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-queryparser-api</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-queryparser-serql</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-queryparser-sparql</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-queryresultio-api</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-queryresultio-binary</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-queryresultio-sparqljson</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-queryresultio-sparqlxml</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-queryresultio-text</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-repository-api</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-repository-manager</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-repository-http</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-repository-sparql</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-repository-sail</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-repository-event</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-repository-dataset</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-repository-contextaware</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-http-protocol</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-http-client</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-sail-api</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-sail-inferencer</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-sail-memory</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-sail-nativerdf</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-sail-rdbms</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-config</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-util</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-runtime</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-console</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-http-server</artifactId>
-<version>2.6.2</version>
-<type>war</type>
-<scope>runtime</scope>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-http-server-spring</artifactId>
-<version>2.6.2</version>
-</dependency>
-<dependency>
-<groupId>org.openrdf.sesame</groupId>
-<artifactId>sesame-http-workbench</artifactId>
-<version>2.6.2</version>
-<type>war</type>
-<scope>runtime</scope>
-</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-model</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-rio-api</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-rio-binary</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-rio-ntriples</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-rio-n3</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-rio-rdfxml</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-rio-trix</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-rio-turtle</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-rio-trig</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-query</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-queryalgebra-model</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-queryalgebra-evaluation</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-queryparser-api</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-queryparser-serql</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-queryparser-sparql</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-queryresultio-api</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-queryresultio-binary</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-queryresultio-sparqljson</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-queryresultio-sparqlxml</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-queryresultio-text</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-repository-api</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-repository-manager</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-repository-http</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-repository-sparql</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-repository-sail</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-repository-event</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-repository-dataset</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-repository-contextaware</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-http-protocol</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-http-client</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-sail-api</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-sail-inferencer</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-sail-memory</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-sail-nativerdf</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-sail-rdbms</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-config</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-util</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-runtime</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-console</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-http-server</artifactid>
+	<version>2.6.2</version>
+	<type>war</type>
+	<scope>runtime</scope>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-http-server-spring</artifactid>
+	<version>2.6.2</version>
+	</dependency>
+	<dependency>
+	<groupid>org.openrdf.sesame</groupid>
+	<artifactid>sesame-http-workbench</artifactid>
+	<version>2.6.2</version>
+	<type>war</type>
+	<scope>runtime</scope>
+	</dependency>
 
     <dependency>
-	  <groupId>tomcat</groupId>
-	  <artifactId>servlet-api</artifactId>
+	  <groupid>tomcat</groupid>
+	  <artifactid>servlet-api</artifactid>
 	  <version>5.5.23</version>
     </dependency>
     <dependency>
-	  <groupId>org.slf4j</groupId>
-	  <artifactId>slf4j-api</artifactId>
+	  <groupid>org.slf4j</groupid>
+	  <artifactid>slf4j-api</artifactid>
 	  <version>1.6.4</version>
     </dependency>
     <dependency>
-	  <groupId>org.slf4j</groupId>
-	  <artifactId>slf4j-simple</artifactId>
+	  <groupid>org.slf4j</groupid>
+	  <artifactid>slf4j-simple</artifactid>
 	  <version>1.6.4</version>
     </dependency>
     <dependency>
