--- a/ers-global/pom.xml
+++ b/ers-global/pom.xml
@@ -175,240 +175,236 @@
 	  <artifactId>nxparser</artifactId>
 	  <version>1.2.2</version>
     </dependency>
-	<dependency>
-	  <groupid>org.junit</groupid>
-	  <artifactid>com.springsource.org.junit</artifactid>
-	  <version>4.9.0</version>
-	</dependency>
+
 
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-model</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-model</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-rio-api</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-rio-api</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-rio-binary</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-rio-binary</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-rio-ntriples</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-rio-ntriples</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-rio-n3</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-rio-n3</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-rio-rdfxml</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-rio-rdfxml</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-rio-trix</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-rio-trix</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-rio-turtle</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-rio-turtle</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-rio-trig</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-rio-trig</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-query</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-query</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-queryalgebra-model</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-queryalgebra-model</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-queryalgebra-evaluation</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-queryalgebra-evaluation</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-queryparser-api</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-queryparser-api</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-queryparser-serql</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-queryparser-serql</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-queryparser-sparql</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-queryparser-sparql</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-queryresultio-api</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-queryresultio-api</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-queryresultio-binary</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-queryresultio-binary</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-queryresultio-sparqljson</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-queryresultio-sparqljson</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-queryresultio-sparqlxml</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-queryresultio-sparqlxml</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-queryresultio-text</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-queryresultio-text</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-repository-api</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-repository-api</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-repository-manager</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-repository-manager</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-repository-http</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-repository-http</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-repository-sparql</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-repository-sparql</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-repository-sail</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-repository-sail</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-repository-event</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-repository-event</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-repository-dataset</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-repository-dataset</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-repository-contextaware</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-repository-contextaware</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-http-protocol</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-http-protocol</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-http-client</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-http-client</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-sail-api</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-sail-api</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-sail-inferencer</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-sail-inferencer</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-sail-memory</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-sail-memory</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-sail-nativerdf</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-sail-nativerdf</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-sail-rdbms</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-sail-rdbms</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-config</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-config</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-util</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-util</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-runtime</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-runtime</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-console</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-console</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-http-server</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-http-server</artifactId>
 	<version>2.6.2</version>
 	<type>war</type>
 	<scope>runtime</scope>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-http-server-spring</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-http-server-spring</artifactId>
 	<version>2.6.2</version>
 	</dependency>
 	<dependency>
-	<groupid>org.openrdf.sesame</groupid>
-	<artifactid>sesame-http-workbench</artifactid>
+	<groupId>org.openrdf.sesame</groupId>
+	<artifactId>sesame-http-workbench</artifactId>
 	<version>2.6.2</version>
 	<type>war</type>
 	<scope>runtime</scope>
 	</dependency>
 
     <dependency>
-	  <groupid>tomcat</groupid>
-	  <artifactid>servlet-api</artifactid>
+	  <groupId>tomcat</groupId>
+	  <artifactId>servlet-api</artifactId>
 	  <version>5.5.23</version>
     </dependency>
     <dependency>
-	  <groupid>org.slf4j</groupid>
-	  <artifactid>slf4j-api</artifactid>
+	  <groupId>org.slf4j</groupId>
+	  <artifactId>slf4j-api</artifactId>
 	  <version>1.6.4</version>
     </dependency>
     <dependency>
-	  <groupid>org.slf4j</groupid>
-	  <artifactid>slf4j-simple</artifactid>
+	  <groupId>org.slf4j</groupId>
+	  <artifactId>slf4j-simple</artifactId>
 	  <version>1.6.4</version>
     </dependency>
     <dependency>
