--- a/ers-global/pom.xml
+++ b/ers-global/pom.xml
@@ -6,7 +6,7 @@
   <version>1.1-SNAPSHOT</version>
   <name>ERS Global Server Maven Webapp</name>
   <url>http://maven.apache.org</url>
-<!--  <packaging>war</packaging> -->
+  <packaging>war</packaging> 
   <properties>
     <tomcat.version>7.0.34</tomcat.version>
   </properties>
@@ -31,8 +31,11 @@
 		<name>nexus_repo</name>
 		<url>http://repository.m2m.io:8081/nexus/content/repositories/public-releases/</url>
      </repository>
-
-
+     <repository>
+		<id>apache</id>			
+		<name>apache</name>
+		<url>http://people.apache.org/repo/m2-snapshot-repository</url>
+      </repository>
       <repository>
 		<releases>
 			<enabled>true</enabled>
@@ -160,6 +163,17 @@
 	<artifactId>commons-lang</artifactId>
 	<version>2.4</version> 
     </dependency>
+    <dependency> 	
+	<groupId>commons-io</groupId>
+	<artifactId>commons-io</artifactId>
+	<version>1.3.2</version>
+    </dependency>
+    <dependency>
+	<groupId>commons-fileupload</groupId>
+	<artifactId>commons-fileupload</artifactId>
+	<version>1.2.2</version>
+    </dependency>
+
     <dependency>
 	  <groupId>com.google.guava</groupId>
 	  <artifactId>guava</artifactId>
