add checks regarding the graph parameter and other bug fixes

--- a/ers-global/src/main/webapp/WEB-INF/web.xml
+++ b/ers-global/src/main/webapp/WEB-INF/web.xml
@@ -53,6 +53,10 @@
   	<servlet-name>create</servlet-name>
   	<servlet-class>edu.kit.aifb.cumulus.webapp.CreateServlet</servlet-class>
   </servlet>
+  <servlet> 
+	<servlet-name>graph</servlet-name>
+	<servlet-class>edu.kit.aifb.cumulus.webapp.GraphServlet</servlet-class>
+  </servlet>
   <servlet>
   	<servlet-name>read</servlet-name>
   	<servlet-class>edu.kit.aifb.cumulus.webapp.ReadServlet</servlet-class>
