introducing context; each author writes in its own keyspace; another keyspace created to keep information about authors also as RDF triples

--- a/ers-global/src/main/webapp/WEB-INF/web.xml
+++ b/ers-global/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,7 @@
 
   	<context-param>
  		<param-name>storage-layout</param-name> 
-  		<param-value>super</param-value>
+  		<param-value>flat</param-value>
  	</context-param>
 
   	<context-param>
@@ -55,8 +55,8 @@
   	<servlet-class>edu.kit.aifb.cumulus.webapp.CreateServlet</servlet-class>
   </servlet>
   <servlet> 
-	<servlet-name>graph</servlet-name>
-	<servlet-class>edu.kit.aifb.cumulus.webapp.GraphServlet</servlet-class>
+	<servlet-name>author</servlet-name>
+	<servlet-class>edu.kit.aifb.cumulus.webapp.AuthorServlet</servlet-class>
   </servlet>
   <servlet>
   	<servlet-name>read</servlet-name>
