--- a/ers-global/pom.xml
+++ b/ers-global/pom.xml
@@ -19,8 +19,8 @@
       </activation>
       <properties>
         <packaging.type>war</packaging.type>
-        <startup.openshift>yes</startup.openshift>
-        <startup.embedded>no</startup.embedded>
+        <startup.openshift>no</startup.openshift>
+        <startup.embedded>yes</startup.embedded>
       </properties>
       <dependencies>
         <dependency>
@@ -451,6 +451,31 @@
 	  <groupId>org.yaml</groupId>
 	  <artifactId>snakeyaml</artifactId>
 	  <version>1.9</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>12.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.curator</groupId>
+      <artifactId>curator-framework</artifactId>
+	   <version>2.1.0-incubating</version>
+    </dependency>
+   
+    <dependency>
+      <groupId>org.apache.curator</groupId>
+      <artifactId>curator-recipes</artifactId>
+	   <version>2.1.0-incubating</version>
+    </dependency>
+
+   <!-- THIS MAY BE DISCARDED IF IN PRODUCTION -->
+    <dependency>
+      <groupId>org.apache.curator</groupId>
+      <artifactId>curator-test</artifactId>
+	   <version>2.1.0-incubating</version>
     </dependency>
   </dependencies>
 
