all stats gathered from bridged can be now queried; used for visualization task

--- a/ers-global/src/main/webapp/WEB-INF/web.xml
+++ b/ers-global/src/main/webapp/WEB-INF/web.xml
@@ -169,6 +169,10 @@
   </servlet>
   <servlet>
 	<servlet-name>query_bridges</servlet-name>
+	<servlet-class>edu.kit.aifb.cumulus.webapp.QueryBridgesIPServlet</servlet-class>
+  </servlet>
+  <servlet>
+	<servlet-name>query_bridges_stats</servlet-name>
 	<servlet-class>edu.kit.aifb.cumulus.webapp.QueryBridgesStatsServlet</servlet-class>
   </servlet>
 
@@ -221,6 +225,10 @@
   <servlet-mapping>
     <servlet-name>query</servlet-name>
     <url-pattern>/query</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>query_bridges_stats</servlet-name>
+    <url-pattern>/query_bridges_stats</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>query_bridges</servlet-name>
