add servlet to randomly query zookeeper in order to test the acquire/release time for tx support

--- a/ers-global/src/main/webapp/WEB-INF/web.xml
+++ b/ers-global/src/main/webapp/WEB-INF/web.xml
@@ -191,6 +191,10 @@
 	<servlet-name>query_versions_stats</servlet-name>
 	<servlet-class>edu.kit.aifb.cumulus.webapp.QueryVersionsStatsServlet</servlet-class>
   </servlet>
+  <servlet>
+	<servlet-name>query_zookeeper</servlet-name>
+	<servlet-class>edu.kit.aifb.cumulus.webapp.QueryZookeeperStatsServlet</servlet-class>
+  </servlet>
 
   <servlet>
   	<servlet-name>query</servlet-name>
@@ -249,6 +253,10 @@
   <servlet-mapping>
     <servlet-name>query_versions_stats</servlet-name>
     <url-pattern>/query_versions_stats</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>query_zookeeper</servlet-name>
+    <url-pattern>/query_zookeeper</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>query_bridges</servlet-name>
